Fixed footer gap again

--- a/static/nologin/css/styles.css
+++ b/static/nologin/css/styles.css
@@ -124,7 +124,7 @@ body {
   width: 100%;
   text-align: center;
   padding-top: 0px;
-  margin-top: 100%;
+  margin-top: 0%;
 }
 
 .homepage-footer > ul {
